Laba4.tf
#My WebServer


provider "aws" {
  access_key = "AKIA6DY3F5XKH7ARTD5N"
  secret_key = "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"
  region     = "eu-central-1"
}

resource "aws_eip" "my_static_ip" {
  instance = aws_instance.my_webserver.id
}


resource "aws_instance" "my_webserver" {
  ami                    = "ami-03c3a7e4263fd998c" #Amazon ami -2
  instance_type          = "t2.micro"
  vpc_security_group_ids = [aws_security_group.my_webserver.id]
  user_data              = <<EOF
  #!/bin/bash
  yum -y update
  yum -y install httpd
  echo "<h2>WebServer with IP: </h2><br><h1>Build by Terraform!><h1>Nazar</h1>"  >  /var/www/html/index.html
  sudo service httpd start
  chkconfig httpd on
EOF

  lifecycle {
    create_before_destroy = true
  }

}

resource "aws_security_group" "my_webserver" {
  name        = "Webserver Security Group"
  description = "First_SecurityGroup"



  ingress {
    description = "Inputting Ports"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "Inputting Ports"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }


  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


  tags = {
    Name = "Nazar"
  }
}
